--- a/Econometrie/projet/rendu.qmd
+++ b/Econometrie/projet/rendu.qmd
@@ -7,7 +7,7 @@ format:
         href: https://colin.geind.re/
       - text: Denis
         href: https://dataforgood.fr/
-    # css: style.css
+    css: style.css
 ---
 
 ```{r setup, include=FALSE}
@@ -23,6 +23,8 @@ library(ggplot2)
 **JAOUEN Denis - GEINDRE Colin**
 
 [**Master 1 MAS - Université de Rennes**](https://eco.univ-rennes.fr/master-mathematiques-appliquees-statistique) et [**Master 1 MAS - Université Rennes 2**](https://formations.univ-rennes2.fr/fr/formations/master-37/master-mention-mathematiques-appliquees-statistique-parcours-sciences-des-donnees-intelligence-artificielle-JFTJBMKM.html)
+
+La rédaction de ce document s'appuie sur l'utilisation d'IA générative, ainsi que sur des blocs de codes fournit sur des forums comme medium ou stack overflow. Les auteur.ice.s de ces blocs sont remercié.e.s en fin de document.
 
 # Introduction
 
@@ -59,18 +61,18 @@ Ayant des données allant de 1789 à 2024 et beaucoup de données manquantes, no
 | Code de la série | Définition | Unité | Source |
 |:---|----|:--:|---:|
 | Code | Le code du pays | Caractères | \- |
-| Political_Corruption | La moyenne de 2013 à 2023 d'un index de corruption politique allant de 0 à 1 | Index allant de 0 à 1 | https://data360.worldbank.org/en/indicator/VDEM_CORE_V2X_CORR |
-| GDP_per_capita | La moyenne de 2013 à 2023 du PIB par habitant | En dollar américain par habitant | https://data360.worldbank.org/en/indicator/WB_WDI_NY_GDP_PCAP_CD |
-| Lifespan | La moyenne de 2013 à 202O de l'espérance de vie à la naissance | En années | https://data360.worldbank.org/en/indicator/WB_ESG_SP_DYN_LE00_IN |
-| Net_Migration | La moyenne de 2013 à 2020 de la migration nette | En nombre de personnes | https://data360.worldbank.org/en/indicator/WB_WDI_SM_POP_NETM |
-| Overweight_Adults | La moyenne de 2013 à 2016 de la proportion d'adulte de 18 ans et plus dont l'IMC est supérieur à 25. | En pourcentage | https://data360.worldbank.org/en/indicator/WB_HNP_SH_STA_OWAD_ZS |
-| Population_density | La moyenne de 2013 à 2021 de la densité de population en nombre d'habitant à la mi-année par kilomètres carrés | En habitant par kilomètre carré | https://data360.worldbank.org/en/indicator/WB_WDI_EN_POP_DNST |
-| KWH_pp_pc | La moyenne de 2013 à 2023 de la consommation en kilowattheure par personne | En kilowattheure par personne | https://ourworldindata.org/grapher/per-capita-energy-use?overlay=download-data |
-| Military_Expenses | La moyenne de 2013 à 2023 du pourcentage du PIB dédié à la dépense militaire | En pourcentage du PIB | https://ourworldindata.org/grapher/military-spending-as-a-share-of-gdp-sipri?overlay=download-data |
-| Population_Growth | La moyenne de 2013 à 2023 de la croissance en pourcentage de la population | En pourcentage | https://ourworldindata.org/grapher/population-growth-rates?tab=map&overlay=download-data |
-| Primary_School_Enrollment | La moyenne de 2013 à 2022 du nombre d'étudiant inscrits en école primaire divisé par la population du groupe d'age multiplié par 100 | En pourcentage | https://data360.worldbank.org/en/indicator/WB_ESG_SE_PRM_ENRR |
-| OCDE | Une indicatrice avec 1 si le pays est membre de l'OCDE et 0 sinon | Indicatrice | https://www.oecd.org/en/about/members-partners.html |
-| Happiness | La moyenne de 2013 à 2023 de l'indice du bonheur calculé par le World Happiness Index | Index allant de 0 à 10 | https://www.worldhappiness.report/data-sharing/ |
+| Political_Corruption | La moyenne de 2013 à 2023 d'un index de corruption politique allant de 0 à 1 | Index allant de 0 à 1 | [World Bank](https://data360.worldbank.org/en/indicator/) |
+| GDP_per_capita | La moyenne de 2013 à 2023 du PIB par habitant | En dollar américain par habitant | [World Bank](https://data360.worldbank.org/en/indicator/WB_WDI_NY_GDP_PCAP_CD) |
+| Lifespan | La moyenne de 2013 à 202O de l'espérance de vie à la naissance | En années | [World Bank](https://data360.worldbank.org/en/indicator/WB_ESG_SP_DYN_LE00_IN) |
+| Net_Migration | La moyenne de 2013 à 2020 de la migration nette | En nombre de personnes | [World Bank](https://data360.worldbank.org/en/indicator/WB_WDI_SM_POP_NETM) |
+| Overweight_Adults | La moyenne de 2013 à 2016 de la proportion d'adulte de 18 ans et plus dont l'IMC est supérieur à 25. | En pourcentage | [World Bank](https://data360.worldbank.org/en/indicator/WB_HNP_SH_STA_OWAD_ZS) |
+| Population_density | La moyenne de 2013 à 2021 de la densité de population en nombre d'habitant à la mi-année par kilomètres carrés | En habitant par kilomètre carré | [World Bank](https://data360.worldbank.org/en/indicator/WB_WDI_EN_POP_DNST) |
+| KWH_pp_pc | La moyenne de 2013 à 2023 de la consommation en kilowattheure par personne | En kilowattheure par personne | [World Bank](https://ourworldindata.org/grapher/per-capita-energy-use?overlay=download-data) |
+| Military_Expenses | La moyenne de 2013 à 2023 du pourcentage du PIB dédié à la dépense militaire | En pourcentage du PIB | [Our World in Data](https://ourworldindata.org/grapher/military-spending-as-a-share-of-gdp-sipri?overlay=download-data) |
+| Population_Growth | La moyenne de 2013 à 2023 de la croissance en pourcentage de la population | En pourcentage | [Our World in Data](https://ourworldindata.org/grapher/population-growth-rates?tab=map&overlay=download-data) |
+| Primary_School_Enrollment | La moyenne de 2013 à 2022 du nombre d'étudiant inscrits en école primaire divisé par la population du groupe d'age multiplié par 100 | En pourcentage | [World Bank](https://data360.worldbank.org/en/indicator/WB_ESG_SE_PRM_ENRR) |
+| OCDE | Une indicatrice avec 1 si le pays est membre de l'OCDE et 0 sinon | Indicatrice | [OCDE](https://www.oecd.org/en/about/members-partners.html) |
+| Happiness | La moyenne de 2013 à 2023 de l'indice du bonheur calculé par le World Happiness Index | Index allant de 0 à 10 | [World Happiness Report](https://www.worldhappiness.report/data-sharing/) |
 
 ## Prétraitement et nettoyage des données
 
@@ -80,7 +82,7 @@ Nous avons sélectionné les jeux de données que nous avons trouvé nous parais
 
 ## Analyse descriptive univariée des données
 
-```{r}
+```{r echo=FALSE}
 # import des données
 data = read.csv(file = 'donnees.csv', row.names = 2)[,-1] # pour enlever la colonne "numero"
 head(data)
@@ -88,7 +90,7 @@ head(data)
 data$OCDE <- as.factor(data$OCDE)
 ```
 
-```{r}
+```{r echo=FALSE}
 # Etude des statistiques descriptives
 data_numeric <- data[, sapply(data, is.numeric)]
 stargazer(data_numeric, median = TRUE, type = "text", title="Statistiques descriptives ", digits=2)
@@ -104,7 +106,7 @@ Les dépenses militaires ayant une moyenne légèrement plus élevée que la mé
 
 Le reste des variables ont l'air d'être peu dispersées. On peut s'atttendre à y voir une répartition normale des valeurs.
 
-```{r}
+```{r echo=FALSE}
 # histogramme de la variable cible
 ggplot(data, aes(x=Happiness)) +
   geom_histogram(binwidth=0.25, fill="blue", color="black", alpha=0.7) +
@@ -123,7 +125,7 @@ Le boxplot du bonheur présente une répartition très équilibrée de notre var
 
 ### Analyse de chaque variable explicative
 
-```{r, fig.height=12, fig.width=12}
+```{r echo=FALSE, fig.height=12, fig.width=12}
 plots <- list()
 
 for (i in 1:ncol(data_numeric)) {
@@ -141,19 +143,19 @@ ncol_plot <- 2
 #do.call(grid.arrange, c(plots, ncol = ncol_plot))
 ```
 
-```{r}
+```{r echo=FALSE}
 do.call(grid.arrange, c(plots[c(4,8,9,10)], ncol = 2))
 ```
 
 Au vu de la symétrie de leurs histogrammes on peut considérer que la croissance de la population, l'inscription à l'école primaire, les dépenses militaires et la migration peuvent suivre des lois normales.
 
-```{r}
+```{r echo=FALSE}
 do.call(grid.arrange, c(plots[c(2,6,7)], ncol = 2))
 ```
 
 La consommation d'énergie, la densité de population et le PIB par habitant semblent suivre des lois inverses.
 
-```{r}
+```{r echo=FALSE}
 do.call(grid.arrange, c(plots[c(1,3,5)], ncol = 2))
 ```
 
@@ -173,7 +175,7 @@ On remarque immédiatement les individus les plus aberrants qui referont surface
 
 ## Analyse descriptive bivariée des données
 
-```{r, fig.height=4, fig.width=6}
+```{r echo=FALSE, fig.height=4, fig.width=6}
 # Corrélations simples et affichage graphique (base R)
 vars <- names(data_numeric)[-ncol(data_numeric)]
 cors <- sapply(vars, function(v) cor(data_numeric$Happiness, data_numeric[[v]]))
@@ -192,7 +194,7 @@ par(mar = c(5, 4, 4, 2) + 0.1)
 On remarque ici les variables les plus et les moins corrélées. L'espérance de vie, le PIB/hab, le surpoids et la consommation énergétique sont très corrélées positivement avec l'indice de bonheur tandis que la corruption politique et la croissance de population semblent elles être corrélées négativement.\
 Les autres variables ne semblent pas être corrélées drastiquement à l'indice de bonheur.
 
-```{r, fig.height=12, fig.width=12}
+```{r echo=FALSE, fig.height=12, fig.width=12}
 # Tracé des graphes de points et de la linéarité
 scatter_plots <- list()
 
@@ -222,7 +224,7 @@ On doute de la linéarité entre l'indice de bonheur et la corruption politique 
 
 Finalement, on remarque une certaine linéarité positive entre l'indice de bonheur et l'espérance de vie à la naissance, les points semblent bien décrire une droite.
 
-```{r}
+```{r echo=FALSE}
 # Corrélation entre les variables explicatives
 library(corrplot)
 corrplot(cor(data_numeric[,-ncol(data_numeric)]), method="shade", type = "lower", tl.col="black", tl.srt=45)
@@ -244,7 +246,7 @@ On a donc quatre variables qui semblent corrélées entre elles.
 
 ## Modélisation principale
 
-```{r}
+```{r echo=FALSE}
 # premier modèle : toutes les variables candidates
 reg1 <- lm(Happiness ~ Political_Corruption + KWH_pp_pc + GDP_per_Capita + Lifespan + Net_Migration + Overweight_Adults + Population_Density + Military_Expenses + Population_Growth + OCDE + Primary_School_Enrollment, data = data)
 
@@ -254,7 +256,7 @@ print(summary(reg1))
 
 De prime abord, on constate d'après le test de Fisher, que notre modèle explique plus de 80% de la variance de l'indice duebonheur. Nos variables significatives, par ordre de significativité, sont l'espérance de vie, le surpoids, le PIB par habitant, la dépense militaire, la participation à l'OCDE et l'inscription à l'école primaire.
 
-```{r}
+```{r echo=FALSE}
 # VIF pour contrôler la multicolinéarité
 library(car)
 print(vif(reg1))
